2009-06-21  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	In CookieStorage::load() and saveNsFormat(), handle exception
	inside the functions. When saving Cookies, first write temporary
	file and after successful writes, then renames it to final
	destination.
	* src/CookieStorage.cc
	* src/CookieStorage.h
	* src/MultiUrlRequestInfo.cc

2009-06-21  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	The default value of --dir option is the absolute path to the
	current directory. If getcwd() is failed, then it is ".", which is
	the same value with old implementation. This change is necessary
	because after daemon() call, the current working directory is
	changed to /.
	* src/File.cc
	* src/File.h
	* src/OptionHandlerFactory.cc
	* src/option_processing.cc

2009-06-21  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Call daemon() with arguments(0,0), which means daemon() changes
	current working directory to / and redirects stdin, stdout and
	stderr to /dev/null.
	* src/option_processing.cc

2009-06-21  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Small performance optimizations.
	* src/RequestGroupMan.cc

2009-06-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added _xmlRpc member variable to RequestGroupMan to reduce the
	number of call Option::getAsBool(PREF_ENABLE_XML_RPC)	
	* src/RequestGroupMan.cc
	* src/RequestGroupMan.h

2009-06-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Call setStatus(STATUS_ONESHOT_REALTIME) from constructor.  Call
	setNoWiat(true) if newly created command calls
	setStatus(STATUS_ONESHOT_REALTIME) from its constructor.
	* src/HttpListenCommand.cc
	* src/HttpServerBodyCommand.cc
	* src/HttpServerCommand.cc
	* src/HttpServerResponseCommand.cc
	* src/InitiateConnectionCommand.cc
	* src/RequestGroup.cc
	* src/StreamFileAllocationEntry.cc

2009-06-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed include vector
	* src/BtRegistry.h
